# epv

./: .env  .gitignore  Cargo.toml  config.json
frontend/: index.html  main.css  main.js
frontend/script/: index.html  script.js
frontend/view/: index.html  view.js
src/: api.rs  config.rs  error_handling.rs  imap.rs  main.rs  rocket_types.rs  sql.rs  util.rs
src/api/: execute_script.rs
