[package]
name = "email_ponzi_ventures"
version = "0.1.0"
edition = "2021"

[dependencies]
async-imap = "0.9.7"
csv = "1.3.0"
dashmap = "5.5.3"
futures = "0.3.30"
futures-rustls = "0.25.1"
hex = "0.4.3"
itertools = "0.12.1"
mailparse = "0.14.1"
regex = { version = "1.10.3", features = [] }
reqwest = { version = "0.11.24", features = ["rustls", "cookies"] }
rocket = { version = "0.5.0", features = ["json"] }
rustls-native-certs = "0.7.0"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "fs", "sync"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
url = "2.5.0"
webpki = "0.22.4"
